<resources>
    <string name="app_name">WheresMyStuff</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>
    <string name="enter_found_item">Enter Found Item</string>
    <string name="facebook_app_id">1964229817188815</string>
    <string name="fb_login_protocol_scheme">fb1964229817188815</string>
    <string name="search">Search</string>
    <string name="lost">Lost</string>
    <string name="enter_lost_items">Enter Lost Items</string>
    <string name="view_lost_items">View Lost Items</string>
    <string name="view_items">View Items</string>
    <string name="search_lost_items">Search Lost Items</string>
    <string name="un_ban_a_user">Un-ban A User</string>
    <string name="ban_a_user">Ban A User</string>
    <string name="enter_user">Enter User</string>
    <string name="enter_user1">Enter User</string>
    <string name="ban">Ban</string>
    <string name="un_ban">Un-ban</string>
    <string name="logout">Logout</string>
    <string name="where_s_my_stuff">Where\'s My Stuff</string>
    <string name="banner">As of (date here), (x amount) items have been successfully returned to their owners!</string>
    <string name="name_of_item">Name Of Item</string>
    <string name="found_item">Found Item</string>
    <string name="enter">Enter</string>
    <string name="cancel">Cancel</string>
    <string name="color">Color</string>
    <string name="enter_color">Enter Color</string>
    <string name="description">Description</string>
    <string name="enter_description">Enter Description</string>
    <string name="street_address">Street Address</string>
    <string name="enter_address">Enter Address</string>
    <string name="enter_lost_item">Enter Lost Item</string>
    <string name="lost_item">Lost Item</string>
    <string name="enter_street_address">Enter Street Address</string>
</resources>
